mountall (2.4~) UNRELEASED; urgency=low

  * src/mountall.c: The mount table needs to exist for parse_filesystems
    - parse_filesystems() could call mount_proc(), which would call
      find_mount() and segfault.  LP: #503212.
  * src/mountall.c: Handle TAG_UNKNOWN

 -- Johan Kiviniemi <debian@johan.kiviniemi.name>  Sat, 09 Jan 2010 05:48:25 +0200

mountall (2.3) lucid; urgency=low

  * conf/mounted-dev.conf: even with devtmpfs we need to make a few symlinks
    (/dev/fd, /dev/std{in,out,err})

 -- Scott James Remnant <scott@ubuntu.com>  Thu, 24 Dec 2009 02:35:35 +0000

mountall (2.2) lucid; urgency=low

  * Allow the "nobootwait" option for virtual devices too (which we
    ordinarily wait for all of).

 -- Scott James Remnant <scott@ubuntu.com>  Wed, 23 Dec 2009 03:59:45 +0000

mountall (2.1) lucid; urgency=low

  * Still having problems with the mount-point tagging that decides whether
    a given filesystem is virtual, local or remote.  Apply further fixes
    in an attempt to reduce problems:
    - don't use the prior fstab entry of virtual filesystems when the
      device spec matches the filesystem type (as well as "none")
    - inherit local and remote tags of device parents and prior fstab entries
      as well as mountpoint parents
    - fix inheritance to also work when fstab is out-of-order (e.g. /mnt/proc
      before /proc)
  * Don't assert() when skip_mount() called on a filesystem that needs to
    be remounted.
  * Don't trigger the swap event more than once.
  * Skipping a mount doesn't increase our changes of mounting other
    filesystems, it just means we'll enter an infinite loop of trying to
    mount the filesystem we just skipped!
  * Mountpoints not listed in /etc/fstab should be recorded with the options
    they were mounted with, not "defaults", otherwise we'll attempt to
    remount them if read-only.
  * Start maintenance shell should mountall crash.

 -- Scott James Remnant <scott@ubuntu.com>  Tue, 22 Dec 2009 18:48:13 +0000
