@@ -4,6 +4,7 @@ mountall (2.4~) UNRELEASED; urgency=low
     - parse_filesystems() could call mount_proc(), which would call
       find_mount() and segfault.  LP: #503212.
   * src/mountall.c: Handle TAG_UNKNOWN
+  * src/mountall.c: Ensure boredom_timer is set to NULL when freeing
 
  -- Johan Kiviniemi <debian@johan.kiviniemi.name>  Sat, 09 Jan 2010 05:48:25 +0200
 
